Add the Chinese post, and update some previous posts.

--- a/blog/2016-04-13-pay-blog.markdown
+++ b/blog/2016-04-13-pay-blog.markdown
@@ -1,11 +1,15 @@
-## 关于博文的自愿付费方式
+## 博文的自愿付费方式
 
-曾经有很多人跟我建议，给我的博文里面加上付款的链接，这样我花费的时间可以得到一些回报。我一直很高尚的样子，不愿意为此收费。然而，根据经济学的原理，这是有害社会的 :P 经济的原理是这样，有价值的事物，应该在经济上受到相应的支持，这样好的东西才能受到鼓励，发扬光大，不好的东西才可能被人忘记。
+有很多人建议我在博文里加上付款方式，这样我花费的时间可以得到一些回报。我一直不愿意为此收费，然而后来我发现，根据经济学的原理，这是有害社会的。原理是这样，有价值的事物，就应该在经济上受到相应的回报，这样好的东西才能受到鼓励，发扬光大，不好的东西才可能被人忘记。
 
-所以现在我决定，给我觉得价值比较大的文章加上大概的价格，这样喜欢文章的人可以自愿付费，当然也可以不付费。谢谢你的支持！
+所以现在我决定，给我觉得价值比较大的文章加上大概的价格，这样喜欢文章的人可以自愿付费购买，当然也可以不付费。不过请注意避免一个心理问题，这是等价的商品交易，而不是在募捐，所以请不要支付超过标签价格。
 
-【[PayPal付款链接](http://paypal.me/yinwang0/5)】
+你可以使用两种方式付款：
 
-支付宝二维码（收款人是我家人的账号 mantianxing）：
+1.  PayPal：请点击[[付款链接](http://paypal.me/yinwang0/5)]
 
-![](http://www.yinwang.org/images/alipay.jpg)
+2.  支付宝：请扫描二维码，收款人是我家人的账号 mantianxing。
+
+    ![](http://www.yinwang.org/images/alipay.jpg)
+
+    ​
