--- a/blog/2017-04-19-yinhei.markdown
+++ b/blog/2017-04-19-yinhei.markdown
@@ -2,9 +2,7 @@
 
 我知道有许多人喜欢看我的博客，因为我擦亮了他们的眼睛，给了他们智慧和力量。我也知道有很多人喜欢“黑”我，我曾经在意过这些“垠黑”，甚至亲自跟他们吵。然而逐渐的，我发现了这些垠黑们的一些特征。有些是闲的无聊，有的是心理不正常，有些则是因为我批判的东西，正好伤到了他耐以生存的幌子。所以这些人开始在网上黑我，甚至自己立个靶子，杜撰我从来没有说过的话，然后进行反驳，以此攻击我本人。
 
-有朋友跟我说，在网上看到这些黑我的人，都帮我骂回去。其实逐一的反击这些垠黑，完全是浪费时间。跟疯狗对骂，不但不起作用，反倒坏了自己的心情。对这些人，最好的办法是忽略他们。不去看他们说什么，不去访问他们聚集的网站（比如知乎）。
-
-虽然垠黑们都是蚍蜉想撼大树，但是由于他们在网络上的无耻行为引起我的朋友们不必要的烦扰，我觉得还是有必要写一篇文章，统一对他们进行披露和鄙视。
+有朋友跟我说，在网上看到这些黑我的人，都帮我骂回去。其实逐一的反击这些垠黑，完全是浪费时间。不但不起作用，反倒坏了自己的心情。对这些人，最好的办法是忽略他们。不去看他们说什么，不去访问他们聚集的网站（比如知乎）。虽然我根本不在乎这种人，然而由于他们在网络上的行为可能引起我的朋友们不必要的烦扰，我觉得还是有必要统一对他们进行披露和鄙视。
 
 ### 现实中的垠黑
 
@@ -16,36 +14,48 @@
 
 ### 网络上的垠黑
 
-网络上的垠黑，貌似还真的挺多，我甚至亲身见过其中一位。前段时间我专门写了一篇博文，反驳某个看似专业的垠黑对 PySonar 的歪曲。可是后来我发现，跟这种人争锋相对，其实不但贬低了我自己的身份，而且还给他提供了信息。在我的文章中，我指出了这人好几处知识缺陷，一知半解，照本宣科的地方，并且点明了好几处精髓的思维要点。
+网络上的垠黑，貌似还真的挺多。前段时间我专门写了一篇博文，反驳某个看似专业的垠黑对 PySonar 的歪曲。可是后来我发现，跟这种人争锋相对，其实不但贬低了我自己的身份，而且还给他提供了信息。在我的文章中，我指出了这人好几处知识缺陷，一知半解，照本宣科的地方，并且点明了好几处精髓的思维要点。
 
-这样的辩论，我显然取得了压倒性的胜利，因为对方只是一个想鼓吹起自己名声的小人。然而我的文章却泄露了很重要的直觉和技术机密，如果这人有点心机和脑子，应该可以从里面学到一些精髓思想，进而可以拿去忽悠其他人。所以我虽然取得了胜利，却可能在无意中教会了别人一些重要的东西。也许他黑我的目的就在于此吧，使用“激将法”逼我说出一些信息。
+这样的辩论，我显然取得了压倒性的胜利，因为对方只是一个想鼓吹起自己名声的人。然而我的文章却泄露了很重要的直觉和技术机密，如果这人有点心机和脑子，应该可以从里面学到一些精髓思想，进而可以拿去忽悠其他人。所以我虽然取得了胜利，却可能在无意中教会了别人一些重要的东西。也许他黑我的目的就在于此吧，使用“激将法”逼我说出一些信息。由于这个原因，我删掉了那篇博文。自己的深入见解和这种人的名字，都不应该出现在我的博客上面，他们应该被抹去。
 
-由于这个原因，我删掉了那篇博文。自己的技术机密和这种人的名字，都不应该出现在我的博客上面，他们应该被抹去。
+另外我还被一个垠黑骗过。他开头假装友好，甚至要到了我的联系方式，后来就开始向我请教一些 PL 方面的问题。我开头觉得他挺有趣，所以给他讲了很多 PL 的知识，包括我自己独特的心得。后来，我发现他提的问题越来越多，涉及各个方面，却始终没能说出有分量的话来。从跟他的对话，我也看出来他对很多问题的见解停留在“听说”的程度，根本没有深入看过细节，却喜欢显得懂行。他不断地试图从我这里得到信息，可我并不觉得他真心感激我的帮助，所以我开始对他有所保留。
+
+后来有一天，一个朋友告诉我，你知道吗，有个人在论坛里说你坏话，说你其实不懂什么。我去看了，才发现就是他。他表面上是在跟我请教，背地里却在一个论坛议论我，把我没告诉他的事情，都说成是我不懂。遇到这样表面上是朋友，背地里却把我的话拿出去歪曲摸黑的人，我真的非常心寒。这个人现在仍然在抓住一切可以利用的机会黑我，然而显然，很多人都看透了他的真面目，他在网上发布的那些东西，有点基本素养的人都知道是没有深度的。这种人越是黑我，别人越是不喜欢他，只有他的同类才会跟他一起起哄。
+
+我还遇到过这种“两面三刀型垠黑”的升级版。这个故事很离奇，要从我上次在美国遇到工作和签证困境的时候说起。当时有个人给我发了封 email，说愿意帮我内推到某著名互联网公司。由于我很快找到了另一个工作，所以没有来得及面试他的公司。我接受了另一个公司的工作，脱离了困境，生活逐渐走上正轨。两年之后，我在博文里提到，我想开始探索新的领域。这个人以为我又遇到了困境，所以又发信来联系我，说要不要我再帮你内推一下？其实我当时对他的公司一点也不感兴趣，但我觉得他是一个不错的人，所以感谢他愿意帮忙。我根本没想要他内推我，但由于他表现出的诚恳，我心想交个朋友也不错，所以同意跟他见面吃个饭。
+
+本来说只有他和另外一个朋友，结果我到的时候发现好多人站在饭店门口，所以我以为不是他们。然而奇怪的事发生了，其中一个胖子看到另外一个人到了，用很拽的北京口音对他说道：“你就是那啥王垠，对吧？” 看到这样的气势，我感觉怎么有点不对劲，这样的人显然不是我愿意结交的。然而来吃饭的，确实就是这帮人。最后我发现上桌的总共有十多个人，来自各大公司：Google，Uber，LinkedIn…… 吃完饭回家，通过另外一个朋友，我才发现这个人把我的朋友圈屏蔽了，然后在背地里发了一个帖子嘲笑我，说：“老王啊老王，两年不见了，你又来找我帮你介绍工作。年纪都一大把了，你还在追求自己的情怀。看我，十年前就开始追求财富和地位……” 后来他又发帖招人一起吃饭，还说王垠也会到场。这就是那天为什么那么多人去吃饭……
+
+原来这个人表面上说想帮忙，而其实在背地里黑我。明明是他主动给我发信，却说得好像我在求他似的。他找了同僚们去跟我吃饭，目的无非是让他们看我的笑话。他可能以为我又再次落难，会在饭桌上丢脸，而其实我根本不需要帮助。吃饭的时候，当着那几个 Google 员工的面，我轻描淡写的调侃 Google，各种谈笑风生。到场的人很多赞同我的说法，可能也有人真心的钦佩我，然而由于他们出现于那样的场面，不免有小人的嫌疑。所以后来我把那天加上的微信朋友全都删掉了。后来我发现这人还有一个微信公众号，在上面还有挺多粉丝，经常发一些吹牛拍马的帖子，显示自己懂一些东西。他的好些同事和微信朋友都知道他的为人，都不愿意跟他来往。
+
+遇到这样的人，我虽然有些心寒，却丝毫不能减弱我对中国人的信心。我相信绝大部分的中国人还是好心善良的，很多人都可以是朋友。实际上，支持我的人比垠黑的数量要多很多很多，他们的个人素质和社会地位也要比这些垠黑高很多。由于跟这些人的遭遇，我积累了识别这类小人的经验。现在我用靠直觉就能感觉出一个人是否真诚。我不得不感谢这几个垠黑，因为跟他们的接触，我才有了这种很有用的“人事能力”。
 
 ### 所谓“老同学”
 
 垠黑的队伍里面，其实也有少数老同学一类的。很多人总是在乎老同学情谊，然而其实每个人的老同学里面，有几个是真正的朋友呢？
 
-当我离开 Coverity 时，大骂这公司的恶劣行径。这时候一个清华的老同学给我 email，说想跟我聊聊。我以前就跟他说话不大投机，不是一类人。但念在老同学的情面，觉得他现在联系我，可能想口头上支持我一下，也没指望他帮什么忙。于是按约好的时间打电话给他，结果只甩给我一句：“我在给我家老二换尿布忙着呢！” 就挂机了，再也没有打回来。明明是他主动找我聊，打过去却又说他很忙，这老同学真是很有礼貌啊 :P 百思不得其解，不知道他的话是不是在表达这样一个意思：我都生了二胎了，王垠你混的也太差吧！后来他又没头没脑发 email 给我，说：“我正在用 Coverity 的产品呢！” 然后我明白了，原来他因为 Coverity 的产品还不错，就觉得我不该骂 Coverity 对待员工的恶劣作法。然后这人表达能力也有问题，不知道他到底想说什么。
+当我离开 Coverity 时，讲述了这公司的恶劣行径。这时候一个清华的老同学给我 email，说想跟我聊聊。我以前就跟他说话不大投机，不是一类人。但念在老同学的情面，觉得他现在联系我，可能想口头上支持我一下，也没指望他帮什么忙。于是按约好的时间打电话给他，结果只甩给我一句：“我在给我家老二换尿布忙着呢！” 就挂机了，再也没有打回来。明明是他主动找我聊，打过去却又说他很忙，这老同学真是很有礼貌啊 :P 百思不得其解，不知道他的话是不是在表达这样一个意思：我都生了二胎了，王垠你混的也太差吧！后来他又没头没脑发 email 给我，说：“我正在用 Coverity 的产品呢！” 然后我明白了，原来他因为 Coverity 的产品还不错，就觉得我不该骂 Coverity 对待员工的恶劣作法。然后这人表达能力也有问题，不知道他到底想说什么。
 
 世界上就是有这样的老同学，本来当年关系就不咋的，一直没联系，现在主动找上门来，居然开口就嘲笑你。这样的老同学心态不正常，不联系也罢。类似的，特地来嘲讽我的老同学还有另外两个，都是当年说话就不投机的，喜欢吹牛扯淡，不择手段追求功名利禄那种，甚至很猥琐。真正的老同学和朋友，联系就没断过，也不会看到别人转载我的文章才来问候。
 
 ### 为什么会有垠黑
 
-为什么这些人喜欢在网上黑我呢？你也许会问。原因很简单，王垠发布的那些真相，伤害到了他们用来撑起自己名声的东西。
+为什么这些人喜欢在网上黑我呢？你也许会问。原因很简单，我发布的那些真相，伤害到了他们用来撑起自己名声的东西。
 
-如果你仔细观察这些垠黑在网上发的东西，就会发现它们都有一个特点。很多垠黑喜欢上知乎，他们上知乎回答问题，目的在于提高自己的知名度，建立自己在网络上的威望，这样有利于自己将来的仕途，也许真有无知的小公司因为知乎上的威望值，请他们去做 VP 也说不定。如果你观察他们的“知乎头衔”，就会发现他们很喜欢把自己所在公司的名字，自己做的“牛逼技术”挂在上面。比如，“Intel 工程师”，“MIT 博士生”，“CoreCLR 开发者”……
+如果你仔细观察这些垠黑在网上发的东西，就会发现它们都有一个特点。很多垠黑喜欢上知乎，他们上知乎回答问题，目的在于提高自己的知名度，建立自己在网络上的威望，这样有利于自己将来的仕途，也许真有无知的小公司因为知乎上的威望值，请他们去做 VP 也说不定。如果你观察他们的“知乎头衔”，就会发现他们很喜欢把自己所在公司的名字，自己做的“牛逼技术”挂在上面。
 
 这种人还很喜欢在朋友圈转发一种文章，我把它们叫做“技术马屁”。这种文章的标题一般看起来像这样：“硅谷黑科技：牛逼到爆的你从来没听说过的技术！”，“Twitter 内部大数据系统构架分析” ，“Google Kubernetes 构建大规模集群系统详解”，“为什么自动驾驶车会征服全世界”，“所向无敌的 CFA 静态分析技术”…… 咋一看，你以为他只是对技术很感兴趣，很兴奋，然而久而久之你就发现，这人其实根本不知道他转发了什么东西。他甚至自己都没看过那些文章，他也知道其他人不会仔细看。只是这些文章的标题看起来吓人，再把自己的昵称改成“硅谷XXX”，这样国内没见过世面的小编就会不明觉厉，以为这人是什么业界大牛。然后你还发现这人的交际圈里面，充满了各种互相吹捧，一知半解，招摇撞骗的人。也就是这些人，败坏了整个 IT 行业的风气。
 
-那么这种人为什么想黑我呢？你想想，有这么一个叫王垠的，他看透了很多东西，他的文章总是揭示各种技术和社会的真相。他告诉你，自动驾驶车是不切实际的幻想，Go 语言和 Kubernetes 其实是非常混乱不成熟设计糟糕的技术，他告诉你 PL 领域的很多研究其实完全无法投入实用的，他讲述自己在 Google，Coverity 等公司的恶劣遭遇…… 每当王垠揭露这样一个事情，这种夸夸其谈的小人就少了一个可以吹嘘，可以作为靠山的东西，反而会因为自己吹嘘过某个东西，引起相反的效果。看他转发那种马屁文章的人，会开始识破他们的真面目。
+不懂行的人看了那些人的文章，可能看不出差别。然而稍微懂一点的，都会发现这些人说的话写的东西，跟我的技术文章，有着质的差别。我看过一些垠黑的博客，他们发的帖子，很多时候里面谈论的主题，用的术语，都是我根本不会讨论的东西。对同一个问题，见解的深度也有着明显的差别。一个人看透了东西，你明显可以感觉到，而如果他只是浮于表面，你也是看得出来的。一个看透了事物的人，去看一个肤浅的人的文章，直接就能知道这个人脑子里有些什么东西。所以当我看到这些人黑我，我一点都不在乎，因为通过他们的只言片语，我已经知道他们是否值得我的注意力。
 
-这种人显然不希望真相得到传播，因为真相会威胁到他在社会上的立足之地，所以他们会在网上群起攻击王垠。比如有人会说：“王垠吹得那么牛那么神，那怎么在微软的职称才是个 SDE2？” 还有人嘲笑说：“老王啊老王，年纪一大把了还在追求自己的情怀，看我，十年前就开始追求财富……” 各种这样的嘲笑和侮蔑。然而这有意义吗？任何正直有良知的人看了这些，都知道这些人是什么东西。他们的活动圈子，不过也就是那一群互相吹捧的垃圾而已。这些人的话，对于我来说就像是哈巴狗的叫声，完全不能引起我情绪的波动。我写这篇文章的原因，其实主要是我的有些朋友看了那些很不平静，去跟他们对骂。我不想让朋友们的心情受到影响，所以在这里写一篇文章，一巴掌把网上这些苍蝇蚊子全都拍死，省得我朋友去费心 :)
+那么这种人为什么想黑我呢？你想想，有这么一个叫王垠的，他看透了很多东西，他的文章总是用简易的语言，揭示各种技术和社会的真相。他告诉你，自动驾驶车是不切实际的幻想，Go 语言和 Kubernetes 其实是混乱不成熟，设计糟糕的技术，他告诉你 PL 领域的很多研究其实完全无法投入实用的，他讲述自己在 Google，Coverity 等公司的恶劣遭遇…… 每当王垠揭露这样一个事情，这种夸夸其谈的人就少了一个可以吹嘘，可以作为靠山的东西，反而会因为自己吹嘘过某个东西，起到相反的效果。看他转发那种文章的人，会开始识破他们的真面目。
+
+这种人显然不希望真相得到传播，因为真相会威胁到他在社会上的立足之地，所以他们会在网上群起攻击王垠，各种嘲笑和侮蔑。然而这有意义吗？任何正直有良知的人看了这些，都知道这些人是什么东西。他们的活动圈子，不过也就是那一群互相吹捧的人而已。这些人的话，对于我来说就像是狗叫声，完全不能引起我情绪的波动。
 
 ### 网络上没有人知道你是一条狗
 
-很多人看到“网上”一片骂声，却没有发现只有心理不正常，太无聊的人才会上那些网站。有真知灼见的人，好些都很少上网，听说了我的故事都直接联系我，不会在网上谈论这些东西。可以说我的圈子是谈笑有鸿儒，往来无白丁。至于那些“网民”们在说些什么，对于我完全无足轻重。因为“网络上没有人知道你是一条狗”，所以我根本不把网民当做人来对待。
+很多人看到“网上”的骂声，却没有发现只有心理不正常，太无聊的人才会上那些网站。有真知灼见的人，好些都很少上网，听说了我的故事都直接联系我，不会在网上谈论这些东西。可以说我的圈子是谈笑有鸿儒，往来无白丁。至于“网民”们在说些什么，那对于我完全无足轻重。因为“网络上没有人知道你是一条狗”，所以我根本不把网民当做人来对待。
 
-有人认为我在“网上”很活跃，甚至认为我是“网红”，然而我从来就不认为我写文章是在“上网”，我写文章从来就不是为了取悦任何人，所以也跟“网红”扯不上任何关系。正好相反，我是一个完全活在现实世界的人，我跟网民是完全隔绝的。我的文章虽然放在“网上”，依靠网络传播，然而它们就像鲁迅登在报纸上的文章一样，并不属于网络交流。这甚至不属于交流，只能叫做“发表”。在这个过程中，信息的传播是单向的，我从来不看任何人对我文章的评价。不是因为我害怕看人们的评价，而是因为没有人有资格来评价，所以我不在乎。我从来不参与任何网络讨论区的讨论，从来不上 Facebook，知乎，MITBBS 之类的网站。我甚至屏蔽绝大部分微信联系人的朋友圈，我完全不在乎他们在看什么，想什么，做什么。对于我来说，只有面对面的交流才是真实可靠的。
+有人认为我在“网上”很活跃，甚至认为我是“网红”，这是完全错误的想法。我从来就不认为我写文章是在“上网”，我写文章从来就不是为了取悦任何人，所以也跟“网红”扯不上任何关系。正好相反，我是一个完全活在现实世界的人，我跟网民是完全隔绝的。我的文章虽然放在“网上”，依靠网络传播，然而它们就像鲁迅登在报纸上的文章一样，并不属于网络交流。这甚至不属于交流，只能叫做“发表”。在这个过程中，信息的传播是单向的。我从来不看任何人对我文章的评价，不是因为我害怕看人们的评价，而是因为很少有人能够做出有意义有分量的评价。我从来不参与任何网络讨论区的讨论，从来不上 Facebook，知乎，MITBBS 之类的网站。我甚至屏蔽绝大部分微信联系人的朋友圈，我完全不在乎他们在看什么，想什么，做什么。对于我来说，只有面对面的交流才是真实可靠的。
 
-所以呢，这些垠黑其实对我一点作用都没有。他们想抹黑我，想吓退我，然而他们在我眼里不过是哈巴狗而已。当然了，我不会指出这些垠黑的名字，因为我不想被狗咬。然而看过我文章的人，他们显然会擦亮自己的眼睛，在现实世界中识别出这些夸夸其谈，两面三刀的小人，所以这种人在社会上的势力会越来越小。正直而有真知灼见的人都会支持我，我们将联合在一起，互相支持，逐渐改善 IT 业界和职场的不正之风。
+所以这些垠黑不管怎么做，对我其实一点作用都没有。他们想抹黑我，想吓退我，然而他们在我眼里是不存在的。当然了，我不会指出这些垠黑的名字，因为我不想被狗咬。然而看过我文章的人，他们显然会擦亮自己的眼睛，在现实世界中识别出这些夸夸其谈，甚至两面三刀的小人，所以这种人在社会上的势力会越来越小。正直而有真知灼见的人都会支持我，我们将联合在一起，互相支持，逐渐改善 IT 业界和职场的不正之风。
