--- a/blog/2017-05-16-chinese.markdown
+++ b/blog/2017-05-16-chinese.markdown
@@ -1,25 +1,29 @@
 ## 对中国人的信心
 
-每一次说要回国，都会有一些在美国的中国人劝我不要回，也会有一些已经回国的中国人鼓励我回去。对于一个离开中国十年之久的人，要决定放弃美国的一切归国，确实是一件相当犹豫的事情。几次的反复之后，再加上多年来跟美国各种族人士的接触，我终于发现一个让我安心的结论。我对中国人作为一个民族充满了信心，所以我再也不担心回到中国。
+每一次说要回国，都会有一些在美国的中国人劝我不要回，也会有一些已经回国的中国人鼓励我回去。对于一个离开中国十年之久的人，要决定回国确实是一件相当犹豫的事情。几次的反复之后，再加上多年来跟美国各种族人士的接触，我终于发现一个让我安心的结论。我对中国人作为一个民族充满了信心，所以我再也不担心回到中国。
 
-纵观十多年来我在事业上最开心的时光，都是跟中国人在一起。出国之前我为了挣点路费，加入了一家由归国华人创立的游戏平台公司。我仍然记得两位创始人是用如何的礼遇接待我。面试的时候我就已经告诉他们，我准备几个月之后去 Cornell 读博，只是想暂时工作几个月，他们仍然决定接受我作为最早期的员工。不过他们当时也告诫我说：“哎，你去 Cornell 那种地方干嘛？我们两个就是 MIT 毕业的。那些个牛校都不是什么好东西，你会被整得很惨……” 然而由于 Cornell 和“常青藤联盟”的美名，我没有相信他们的话。当然我并没不后悔我的决定，因为辗转几个地方之后，我成为了今天的我。
+纵观十多年来我在事业上最开心的时光，都是跟中国人在一起。出国之前我为了挣点路费，加入了一家由归国华人创立的游戏平台公司。我仍然记得两位创始人是用如何的礼遇接待我。面试的时候我就已经告诉他们，我准备几个月之后去 Cornell 读博，只想暂时工作几个月，他们仍然决定接受我作为最早期的员工。不过他们当时也告诫我说：“哎，你去 Cornell 那种地方干嘛？我们两个就是 MIT 毕业的。那些个牛校都不是什么好东西，你会被整得很惨……” 然而由于 Cornell 和“常春藤联盟”的美名，我没有听信他们的话。我并不后悔当初的决定，因为辗转几个地方之后，我成为了今天的我。然而现在想起来，他们说那些话的确是为我好的。
 
-当时在公司里，同事们水平参差不齐，人们之间却充满了尊重，从来没有人随便 judge 另一个人的能力或者智商。大家都喜欢折腾各种技术，靠着各自的兴趣走到了一起。公司初期的环境虽然简朴，人们之间却充满了关怀。我还记得经常跟几个人去外面吃饭，跟一个猫奴同事请教养猫经验。公司 HR 还经常组织我们出去玩，去酒吧休闲，去玩杀人游戏。那时候的生活是简单而充实的…… 然而我的野心和抱负，终于还是让我放弃了那一切的快乐。几个月之后，我按原计划离开了公司，飞到美国，开始了长达十年之久的坎坷旅程。公司为我准备了丰盛的离别宴，每个人都为我祝福。
+当时在公司里，同事们水平参差不齐，人们之间却充满了尊重，从来没有人随便 judge 另一个人的能力或者智商。大家都喜欢折腾各种技术，靠着各自的兴趣走到了一起，互相学习。公司初期的环境虽然简朴，人们之间却充满了关怀。我还记得经常跟几个人去外面吃饭，跟一个猫奴同事请教养猫经验。公司 HR 还经常组织我们出去玩，去酒吧休闲，去玩杀人游戏。那时候的生活是简单而充实的…… 然而我的野心和抱负，终于还是让我放弃了那一切的快乐。几个月之后，我按原计划离开了公司，飞到美国，开始了长达十年之久的坎坷旅程。公司为我准备了丰盛的离别宴，每个人都为我祝福。
 
-可以说在美国的十年，我一直没能再受到这种级别的礼遇。我的抱负像魔鬼一样的驱使着我，为我选择了一条崎岖坎坷的道路。终于有一天，我认为自己练成了绝世的武功，然而我的心却已经为此伤痕累累。就像有个叫杨过的大侠，纵使旁人认为他有天下无敌的功夫，他自己心里却只是个独臂的怪物而已。在国外，你很难受到真正意义上的尊重。并不是因为外国人歧视中国人，而是因为他们的骨子里本来就不具有中国人的教化（或者叫“进化”）程度。
+可以说在美国的十年，我一直没能再受到这种级别的礼遇。我的抱负像魔鬼一样的驱使着我，为我选择了一条崎岖坎坷的道路。终于有一天，我认为自己练成了绝世的武功，然而我的心却已经为此伤痕累累。就像有个叫杨过的大侠，纵使旁人认为他有天下无敌的功夫，他心里却自知不过是个独臂的怪物而已。在国外，你很难得到真正意义上的尊重。并不是因为中国人是弱势群体，或者因为外国人专门歧视中国人，而是因为外国人的骨子里本来就不具有中国人的教化（或者叫“进化”）程度。
 
-直到十年后的一天，我进入了一个中国人主导的团队，我的生活才随之改变了。每天吃了午饭，我们一群中国人都会沿着 Mountain View 的小路散一圈步，一路上聊各种事情。从跟他们的交流，我再一次的感觉到在中国时的那种互相尊重。很少有人觉得自己有多了不起，大家都是在玩各种技术。也是在这样一个中国团队，我再次遇到了可以在将来的生活和事业中可以作为朋友的人。
+直到十年后的一天，我进入了一个中国人主导的团队，我的生活才随之改变了。每天吃了午饭，我们一群中国人都会休息好长一段时间，沿着 Mountain View 的小路散步，一路上聊各种事情。从跟他们的交流，我再一次的感觉到在中国时的那种互相尊重。很少有人觉得自己有多了不起，大家都是在玩各种技术。也是在这样一个中国团队，我十年以来第一次遇到了在将来的生活和事业中可以作为朋友的人。
 
 可惜好景不长，那毕竟不是中国人掌权的公司，很多事情还是不能如愿。我的抱负，对生活的高期望值，再次决定让我离开，登上它觉得有挑战性的道路。我没有听信几个经验丰富的中国同事的劝告，为了对某些技术的兴趣，加入了微软里面一个印度人主导的团队。起初对印度人还没有成见，一直都对瑜伽和佛教有好感，甚至感觉印度 manager 说话很诚恳。然而日久天长，我才发现这是一种跟中国人完全不同的文化。
 
-印度人并没有中国人骨子里那种谦虚诚实的美德。表现出来的诚恳和谦虚，似乎都只是浮于表面。中国人的谦虚反而成为了可以被他们利用的地方。每一次当你表示自己有需要改进的地方，表示领悟到了某些东西，或者表示对其他人的欣赏，都会被作为你经验不足，作为压低你价值的理由。只有那种城府很深，假装自己什么都已经懂了，号称在这个领域有“三十年经验”的人，才会被认为有价值。然而就是这种人，经常制造出潜伏两年之久的 bug，一旦发作就导致灾难性的后果。
+印度人并没有中国人骨子里那种谦虚诚实的美德。表现出来的诚恳和谦虚，似乎都只是浮于表面。本来不懂很多东西，却总能说得头头是道，信心十足。这似乎是印度人与生俱来的特殊能力。中国人的谦虚反而成为了可以被他们利用的弱点。每当你表示自己有需要改进的地方，表示领悟到了某些东西，或者表示对其他人的欣赏，都会被作为你经验不足，作为压低你价值的理由。只有那种城府很深，假装自己什么都已经懂了，号称在这个领域有“三十年经验”的人，才会被认为有价值。然而就是这种人，经常制造出潜伏两年之久的 bug，一旦发作就导致灾难性的后果。
 
-也许是由于自己的国家生活条件恶劣，印度人必须要联合起来，占领美国这块土地。他们占据美国公司高层管理地位，靠的不是自己的技术和实力，而是靠关系和政治。很多印度人职位很高，然而他们做的东西却没有技术含量。很简单的安装脚本一类的东西，硬是要雇佣一个团队的印度人来写，其中有些人的职位也可以高到 principal 以上。好些印度人除了可以用 PowerShell 写脚本，正规的编程语言都不会，更不要说数据结构和算法了。经常修改之后都会出现意想不到的 bug，有时候很明显他自己都没跑过修改后的脚本，就给放进去了。你安装失败没法工作，只好去找他，他却打心眼里认为你是在求他，爱理不理的。甚至正跟你说着话呢，忽然就当你消失了一样，扭头回他自己的 email 去了。代码里 bug 越多，制造问题越多的人，越是觉得自己权力大，因为他可以让你没法完成自己的工作。
+也许是由于自己的国家生活条件恶劣，印度人必须要联合起来，占领美国这块土地。或者也许是因为他们本身有问题，才导致自己国家的生活条件恶劣。他们占据美国公司高层管理地位，很多靠的不是自己的技术和实力，而是靠关系和政治。很多印度人职位很高，然而他们做的东西却没多少技术含量。
 
-很多国内的中国人不了解情况，看到微软华人高管离职，就感叹中国人输给了印度人，感叹印度人如何的团结，勤奋，有能力。然而事实却是，中国人才是世界上最勤奋，最聪明，但也是最谦虚最善良的民族。试问微软和 Google 的印度 CEO 们，他们亲手做出了什么了不起的东西吗？只不过是手下人做出了东西，自己去领 credit 而已。在我看来，硅谷高科技公司的高层被印度人占据，并不表明中国人在硅谷的失势，而是代表着硅谷的衰落。越来越多有能力有志气的中国人离开硅谷，回到中国。不是因为他们能力不行，而是他们不再愿意过这样受人压制，不能发挥自己才能，发挥了才能却让别人拿 credit 的生活。接受过精华的计算机科学教育的中国人不跟你们玩了，我倒要看印度人要怎样用他们培训班级别的知识，撑起硅谷的高科技 :)
+很多国内的中国人不了解情况，看到某些大公司华人高管离职，就感叹中国人输给了印度人，称赞印度人如何的团结，勤奋，有能力。然而事实却是，中国人才是世界上最勤奋，最聪明，但也是最谦虚最善良的民族。试问微软和 Google 的印度 CEO 们，他们亲手做出了什么了不起的东西吗？只不过是手下人做出了东西，自己去领 credit 而已。
 
-印度人是如此，其它种族的人在这方面可能也没有好到哪里去。他们显示出来的文化背后，并不具有可以跟中国文化比美的美德。你也许认为我有点民族主义，可我不是的。民族主义一般都盲目的认为自己的民族很强大很优秀高人一等，其它民族都是劣等民族，然而我的标准不是技术上或者肌肉上的优秀和强大，而是人文上的，我在乎的是他们的人性，对人的关心和尊重。
+在我看来，硅谷高科技公司的高层被印度人占据，并不表明中国人在硅谷的失势，而是代表着硅谷的衰落。越来越多有能力有志气的中国人离开硅谷，回到中国开创自己的事业。不是因为他们能力不行，而是他们不再愿意过这样受人压制，不能发挥自己才能，发挥了才能却让别人拿 credit 的生活。接受过正规计算机科学教育的中国人不跟你们玩了，我倒要看看印度人怎样用培训班级别的死知识，撑起硅谷的高科技 :)
 
-所以我对中国人充满了信心。这种信心不只是来自于我们的聪明才智，它更多的来自于我们千年以来传承的美德：诚实，谦虚，热爱生活。纵观历史，中华民族从来就是热爱和平，容易满足，乐在自己的生活里的。很少有中国人对称霸世界，侵略其它国家这种事情感兴趣。这就是为什么我们发展了如此博大精深的食物文化，茶文化，酒文化，各种休闲娱乐，可以说是世界首屈一指。就算那些被人指责为“抄袭外国”的网络应用，我们抄过来之后推陈出新，居然可以后来居上，比老外的产品做得有趣好多倍，充满各种贴心而温馨的设计。这是怎么回事？每个对自己的民族没有信心的中国人，都应该思考一下自己真正的价值了。
+印度人是如此，其它种族的人在这方面可能也没有好到哪里去。他们显示出来的文化背后，并不具有可以跟中国文化比美的美德。你也许认为我有点民族主义，可我不是的。民族主义一般都盲目的认为自己的民族很强大很优秀高人一等，其它民族都是劣等民族，应该被欺负甚至被灭绝。然而我的标准不是技术上或者肌肉上的优秀和强大，而是人文上的，我在乎的是他们的人性，对人的关心和尊重。对于不具备这些美德的民族，我只能表达我的遗憾而已。
 
-曾经我们都被教唆，说我们中华民族是伟大的，然而结果却是很多中国人的心里充满了自卑。你越是告诉他们中国很伟大，他们越是以为外国人厉害，国外什么都好。所以你就只有等他们有了海外流浪的经历之后，再来看中国人，也许他们就会真正理解中国文化的价值。他们就可以打心眼里产生对中国人的信心，而不再是因为自卑而空喊出来的口号。
+我对中国人充满了信心。这种信心不只来源于我们的聪明才智，它更多的来源于我们千年以来传承的美德：诚实，勤奋，谦虚，热爱生活。纵观历史，中华民族从来就是热爱和平，容易满足，乐在自己的生活里的。很少有中国人对称霸世界，侵略其它国家那种事情感兴趣。这就是为什么我们发展了如此博大精深的饮食文化，各种休闲娱乐，可以说是世界首屈一指。就算那些被人指责为“抄袭外国”的网络应用，我们抄过来之后推陈出新，居然可以后来居上，比原版产品还有趣好多倍，充满各种贴心的设计。这是怎么回事？每个对自己民族没有信心的中国人，都应该思考一下自己的真正价值了。
+
+曾经我们都被灌输，说我们中华民族是伟大的，结果却是很多中国人的心里充满了自卑。你越是告诉他们中国很伟大，他们越是以为外国人厉害，国外什么都好。所以你就只有等他们有了海外流浪的经历之后，再来看中国人，他们也许就会理解中国文化的价值。他们就可以打心眼里产生对中国人的信心，而不再是因为自卑而空喊出来的口号。
+
+当然了，我并没有把回国的生活想象的过于美好，我肯定也会偶尔遇到困难和不顺心的时候。很显然，不可能每个人都具有我所说的那种美德，也会有很多素质低下的人。显然，国内公司里还是可能有政治斗争和各种不好的现象。对于这些我当然都是有心理准备的。然而由于大部分中国人骨子里面有很好的东西，我相信在国内会遇到很多意气相投的人。
