--- a/blog/2016-04-13-pay-blog.markdown
+++ b/blog/2016-04-13-pay-blog.markdown
@@ -1,10 +1,10 @@
 ## 博文的自愿付费方式
 
-有很多人建议我在博文里加上付款方式，这样我花费的时间可以得到一些回报。我一直不愿意为此收费，然而后来我发现，根据经济学的原理，这是有害社会的。原理是这样，有价值的事物，就应该在经济上受到相应的回报，这样好的东西才能受到鼓励，发扬光大，不好的东西才可能被人忘记。
+有很多人建议我在博文里加上付款方式，这样我花费的时间可以得到一些回报。我一直不愿意为此收费，然而后来我发现，根据经济学的原理，这是有害社会的。原理是这样，有价值的事物，就应该在经济上受到相应的回报，这样好的东西才能发扬光大。
 
-所以现在我决定，给我觉得价值比较大的文章加上大概的价格，这样喜欢文章的人可以自愿付费购买，当然也可以不付费。不过请注意避免一个心理问题，这是等价的商品交易，而不是在募捐，所以请不要支付超过标签价格。
+所以我决定给觉得价值比较大的文章加上大概的价格，这样喜欢文章的人可以自愿付费购买，当然也可以不付费。不过请注意避免一个心理问题，这是等价的商品交易，而不是在募捐，所以请不要支付超过标签价格。
 
-你可以使用两种方式付款：
+你可以使用以下方式付款：
 
 1.  PayPal：请点击[[付款链接](http://paypal.me/yinwang0/5)]
 
@@ -13,3 +13,7 @@
     ![](http://www.yinwang.org/images/alipay.jpg)
 
     ​
+
+3.  微信支付：请扫描二维码。如果你没有以上两种方式才考虑使用这个方式。
+
+    ![](http://www.yinwang.org/images/wechat-pay.jpg)
