--- a/blog/2016-04-13-pay-blog.markdown
+++ b/blog/2016-04-13-pay-blog.markdown
@@ -6,14 +6,12 @@
 
 你可以使用以下方式付款：
 
-1.  PayPal：请点击[[付款链接](http://paypal.me/yinwang0/5)]
+1.  微信支付：
 
-2.  支付宝：请扫描二维码，收款人是我家人的账号 mantianxing。
+    ![](http://www.yinwang.org/images/wechat-pay.jpg)
+
+2.  支付宝：
 
     ![](http://www.yinwang.org/images/alipay.jpg)
 
-    ​
-
-3.  微信支付：请扫描二维码。如果你没有以上两种方式才考虑使用这个方式。
-
-    ![](http://www.yinwang.org/images/wechat-pay.jpg)
+3.  PayPal：请点击[[付款链接](http://paypal.me/yinwang0/5)]
