--- a/blog/2017-07-06-master-pl.markdown
+++ b/blog/2017-07-06-master-pl.markdown
@@ -84,12 +84,15 @@
 *   PHP
 *   Basic
 *   Go
+*   Rust
 
 总的说来，你不应该使用所谓“[脚本语言](http://www.yinwang.org/blog-cn/2013/03/29/scripting-language)”作为入门语言，特别是那些源于早期 Unix 系统的脚本语言工具。PowerShell 虽然比 Unix 的 Shell 有所进步，然而它仍然没有摆脱脚本语言的根本问题——他们的设计者不知道他们自己在干什么 :P
 
 采用脚本语言学编程，一个很严重的问题就是使得学习者抓不住关键。脚本语言往往把一些系统工具性质的东西（比如正则表达式，Web 概念）加入到语法里面，导致初学者为它们浪费太多时间，却没有理解编程最关键的概念：变量，函数，递归，类型……
 
-不推荐 Go 语言的原因类似，虽然 Go 语言不算脚本语言，然而他的设计者显然不明白自己在干什么。所以使用 Go 语言来学编程，你不能专注于最关键，最好的语言特性。
+不推荐 Go 语言的原因类似，虽然 Go 语言不算脚本语言，然而他的设计者显然不明白自己在干什么。所以使用 Go 语言来学编程，你不能专注于最关键，最好的语言特性。关于 Go 语言的各种毛病，你可以参考这篇[文章](http://www.yinwang.org/blog-cn/2014/04/18/golang)。
+
+同样的，我不觉得 Rust 适合作为入门语言。Rust 花了太大精力来夸耀它的“新特性”，而这些新特性不但不是最关键的部分，而且很多是有问题的。初学者过早的关注这些特性，不仅学不会最关键的编程思想，而且可能误入歧途。关于 Rust 的一些问题，你可以参考这篇[文章](http://www.yinwang.org/blog-cn/2016/09/18/rust)。
 
 ### 掌握关键语言特性，忽略次要特性
 
