Update the "love cat" post.

--- a/blog/2017-07-21-love-cat.markdown
+++ b/blog/2017-07-21-love-cat.markdown
@@ -2,7 +2,7 @@
 
 从小就喜欢猫，可惜由于母亲“凡是会拉屎的都不养”的政策，一直都没有机会自己养一只。所以邻居家的猫，对我来说都有一种难以抵抗的诱惑。我还记得小时候住平房，自己学了一声喵叫录到磁带里，然后用最大的音量放出来，结果邻居家的小白猫听见了，窜进我家的纱门，那种欣喜是难以言表的。然而别人家的猫毕竟只能是客人，这个恋猫情结就一直到了自己独立生活的时候，才有了进展。
 
-很多人对猫有误解，认为相对于狗而言，猫不忠诚，养不家，不认人。甚至认为猫很势利，你有吃的就对你好，没吃的就可以不理你，甚至出走。自己养猫之后，发现这些说法全都是误解。猫不但会认人，而且会思念自己喜欢的人。
+很多人对猫有误解，认为相对于狗而言，猫不忠诚，养不家，不认人。甚至认为猫很势利，你有吃的就对你好，没吃的就可以不理你，甚至出走。自己养猫之后，发现这些说法全都是误解。猫不但会认人，而且会思念自己喜欢的人。很多人盲目的认为忠诚是优点，而我觉得狗那种“无条件的忠诚”，其实是虚伪而危险的。狗往往对主人表现得很忠诚，而对其他人就凶神恶煞的。人们都说“狗仗人势”就是这个道理，狗的忠诚里面显露出来的其实是一个字：贱。
 
 你能体会在监控摄像头里看到一只猫，用各种姿势躺在各种位置，望着家门口，盼着你回家的情形吗？出远门旅游的时候，我都会请宠物保姆或者朋友帮我喂猫，去陪陪它。住父母家的时候，父母也没有少照顾它，喂它好吃的零食。可是他们告诉我，我不在家的时候，它就躲在我的房间里不出来，或者趴在地板上望着门口。它的心里有一个人，它在等他回家。所以等到你回家的时候，它就会热情的欢迎你，偎依在你身旁。
 
