Update the "plans" post.

--- a/blog/2017-09-05-plans.markdown
+++ b/blog/2017-09-05-plans.markdown
@@ -104,6 +104,6 @@ What do you care what other people think?
 
 ### D 计划（非技术书籍）
 
-很多人都发现，我这个人除了是个技术天才，还是个其它方面的天才。我的很多博文的各个方面，其实早就可以写成书了。所以我也打算写另外一些书，用以帮助中国人生活得更加幸福。这些方面包括了生活理念，社会理念和关系，礼节和修养，男女关系等等……
+很多人都发现，我这个人除了是个技术天才，还是个其它方面的天才。我的很多博文的各个方面，其实早就可以写成书了。所以我也打算写另外一些书，用以帮助中国人生活得更加幸福。这些方面包括了生活理念，社会理念和关系，礼节和修养，等等……
 
 这些写作的动机来源于我对国人行为和思想的观察。很多人技术能力很强，然而很多其他理念却一塌糊涂。我希望我的这些想法对他们有帮助。
