Add the CIIA1 related posts and wechat post.

--- a/blog/2017-09-25-apple.markdown
+++ b/blog/2017-09-25-apple.markdown
@@ -28,7 +28,9 @@
 
 Trailer 结束 :) 这是 CIIA 研究所出品的第一份商业报告。因为其中蕴含的价值，不再值得被一些不懂得珍惜的人无偿拥有，所以下面的内容不再免费，版权所有，会被作为商品出售。目前收费体系还没有搭建起来，所以先简陋点。想要购买这份报告的人，可以点击主页上的[付费](http://www.yinwang.org/blog-cn/2016/04/13/pay-blog)按钮预定，并且在留言栏注明：“购买报告的编号（#1）+自己的 email 地址”。CIIA 会优哉游哉的打造这份精品报告，大概两个星期的样子发货，通过邮件发送这份含有防盗水印的报告。现在提前预定热销优惠价为￥60一份，开始发货之后会恢复原价￥200。
 
-![](http://www.yinwang.org/images/ciia-wechat-pay.png)
+（2017.10.15 更新：因为报告预定发货已经结束，已经将报告价格涨到原价￥200。如果你感兴趣，请使用以下方式付款，注意注明你的 email 信息。）
+
+![](http://www.yinwang.org/images/ciia-wechat-pay.jpg) ![](http://www.yinwang.org/images/alipay60.jpg)
 
 这个价格只针对普通个人，禁止传播和共享。由于这些信息对于企业的潜在价值，对于企业内部的分享，可以有另外一套企业价，请来信询问。由于这个文档对于苹果公司的潜在价值很大，如果苹果公司真心想购买这份报告，价格大概是一千万美元，请联系客服用另外的方式付费。
 
