Add a new post about heaters, update 3 existing posts.

--- a/blog/2015-07-04-math.markdown
+++ b/blog/2015-07-04-math.markdown
@@ -30,7 +30,11 @@
 
 <div class="language-javascript highlighter-rouge">
 
+<div class="highlight">
+
     function (x) { return x * x }
+
+</div>
 
 </div>
 
