Add 2 new posts and update some recent posts.

--- a/blog/2017-10-22-double11.markdown
+++ b/blog/2017-10-22-double11.markdown
@@ -5,8 +5,10 @@
 1.  CIIA 第一号报告『[从苹果产品的设计错误学教训](http://www.yinwang.org/blog-cn/2017/09/25/apple)』，优惠价￥79（原价￥200）。
 2.  原来免费的文章，继续免费 :p
 
-支付方式。使用微信，支付宝或 PayPal 支付之后，发送 email 到 hi@yinwang.org，提供你的支付凭证（含有支付时间和交易号码），需要购买的报告号码，和接收报告的 email。
+支付方式。使用支付宝或 PayPal 支付之后，发送 email 到 hi@yinwang.org。标题请注明：“购买 CIIA 报告 No.1”。内容提供你的支付凭证，含有支付时间和交易号码（可以抓图）。
+
+另外，由于微信支付的不专业行为，以后不再接受微信支付。
 
 CIIA 一般会在一天之内发货，如果没有收到，请检查垃圾邮箱（因为有大附件），或者来信询问。
 
-![](http://www.yinwang.org/images/wechat79.jpg) ![](http://www.yinwang.org/images/alipay79.jpg)
+![](http://www.yinwang.org/images/alipay79.jpg)
