Add the humidifier post and update the 11.11 one.

--- a/blog/2017-10-22-double11.markdown
+++ b/blog/2017-10-22-double11.markdown
@@ -1,4 +1,4 @@
-## CIIA双11全球狂欢节
+## CIIA双11优惠
 
 为响应全国人民对双11（暨美国老兵节，中国光光节）的展望，CIIA 决定入乡随俗，模仿国内商家，进行双11的优惠酬宾活动。从今天（10月22日）起，至11月11日，CIIA 的产品将进行优惠活动。活动内容见如下海报：
 
@@ -7,7 +7,7 @@
 
 支付方式。使用支付宝或 PayPal 支付之后，发送 email 到 hi@yinwang.org。标题请注明：“购买 CIIA 报告 No.1”。内容提供你的支付凭证，含有支付时间和交易号码（可以抓图）。
 
-另外，由于微信支付的不专业行为，以后不再接受微信支付。
+以后不再接受微信支付，请见谅。
 
 CIIA 一般会在一天之内发货，如果没有收到，请检查垃圾邮箱（因为有大附件），或者来信询问。
 
