--- a/blog/2017-11-06-paid-qa.markdown
+++ b/blog/2017-11-06-paid-qa.markdown
@@ -17,11 +17,11 @@
 现在来说一说我的付费问答的具体施行办法吧。它的流程很简单：
 
 1.  发信到 hi@yinwang.org，标题为“请求付费问答：你的题目”。
-2.  内容必须包含以下内容：a. 你的问题描述，请一定简短，因为我没有特别多时间和耐心来阅读长篇大论，你的生平遭遇之类的内容。如果是技术问题，最好提供形象的例子或者简短的代码片段，提供必要的参考资料。b. 你的职业岗位，收入水平，最好提供简历或者 LinkedIn 链接。我需要这些信息来确认你的身份，给你一个合适的价格。c. 你得到这个回答之后的用途。对于不同的用途，收费水平是不一样的。
+2.  内容必须包含以下内容：a. 你的问题描述，请一定简短，因为我没有特别多时间和耐心来阅读长篇大论。如果是技术问题，最好提供形象的例子或者简短的代码片段，提供必要的参考资料。b. 你的职业岗位，收入水平，最好提供简历或者 LinkedIn 链接。我需要这些信息来确认你的身份，给你一个合适的价格。c. 你得到这个回答之后的用途。对于不同的用途，收费水平是不一样的。
 3.  在收到这些信息之后，我会给你一个回复。a. 我也许会拒绝回答你的问题，这样你就不用付费。b. 我也许会给你一个估价和付费方式。估价主要是基于问题的难度级别，我需要付出的时间，还有我的帮助给你带来的价值。
 4.  在收到付费方式后进行付款，你会在合理的时间之内收到我的答案。如果问题很复杂，也许可以进行语音讨论。我也可以改变主意，退还你的付款，不进行回答。
 5.  如果你看不明白我的回答，可以回信追问。追问如果只是简单的澄清，是可以得到免费回复的。如果追问提到了新的问题，具有比较大的价值，我也许会追加收费。收费的方式跟第3步相同。
 
 当然，这种付费回答的内容属于隐私，是受法律保护的，不可以在公开场合传播。如果你的问题是用于公司岗位需要，当然你可以在公司里跟同事交流，但不能在公开场合发布。
 
-另外请注意，请不要问一些不着边际的大道理，我也不会去看过度复杂的代码，不会帮你完成具体的代码，除非是很短的示意性质的片段。作为一个指导者或者顾问，我的任务就像教授一样，只是引导你走向正确的道路，而不是帮你完成具体的工作或者作业。
+请注意提问应该有针对性，要具体。如果你问，我该怎样提高我自己呢？我是没法回答的。另外请不要问一些不着边际的大道理，我也不会去看过度复杂的代码，不会帮你完成具体的代码，除非是很短的示意性质的片段。作为一个指导者或者顾问，我的任务就像教授一样，只是引导你走向正确的道路，而不是帮你完成具体的工作或者作业。
