Update 3 existing posts.

--- a/blog/2016-04-13-pay-blog.markdown
+++ b/blog/2016-04-13-pay-blog.markdown
@@ -1,10 +1,6 @@
 ## 博文的自愿付费方式
 
-有很多人建议我在博文里加上付款方式，这样我花费的时间可以得到一些回报。我一直不愿意为此收费，然而后来我发现，根据经济学的原理，这是有害社会的。原理是这样，有价值的事物，就应该在经济上受到相应的回报，这样好的东西才能发扬光大。
-
-所以我决定给觉得价值比较大的文章加上大概的价格，这样喜欢文章的人可以自愿付费购买，当然也可以不付费。不过请注意避免一个心理问题，这是等价的商品交易，而不是在募捐，所以请不要支付超过标签价格。
-
-你可以使用以下方式付款：
+喜欢我的文章的人，可以自愿付费购买。你可以使用以下方式付款：
 
 1.  支付宝：
 
@@ -16,10 +12,4 @@
 
 3.  PayPal：请点击[[付款链接](http://paypal.me/yinwang0/5)]
 
-4.  比特币。BTC 收款地址 1MEvqnRgr1BirfmfpGXwxc4YVhok2gsr9F
-
-    或者二维码：
-
-    ![](http://www.yinwang.org/images/bitcoin-address.jpg)
-
-    ​
+4.  BitcoinCash（BCH）。试验一下 BitcoinCash。注意这不是 Bitcoin Core，发送 Bitcoin 到这个地址会导致丢失。由于 Bitcoin 手续费太高，不适合用在这里。我的 BCH 收款地址是： 1DHF41RaMvfSaEScLF2i2nRsSwy8f7EcyM
