--- a/blog/2017-04-23-ai.markdown
+++ b/blog/2017-04-23-ai.markdown
@@ -1,4 +1,4 @@
-## 我为什么不在乎人工智能
+## 人工智能的局限性
 
 有人听说我想创业，给我提出了一些“忽悠”的办法。他们说，既然你是程序语言专家，而现在人工智能（AI）又非常热，那你其实可以搞一个“自动编程系统”，号称可以自动生成程序，取代程序员的工作，节省许许多多的人力支出，这样就可以趁着“AI 热”拉到投资。
 
