--- a/blog/2017-04-23-ai.markdown
+++ b/blog/2017-04-23-ai.markdown
@@ -4,7 +4,7 @@
 
 有人甚至把名字都给我想好了，叫“深度程序员”（DeepCoder = Deep Learning + Coder）。口号是：“有了 DeepCoder，不用 Top Coder！” 还有人给我指出了这方向最新的，吹得神乎其神的研究，比如微软的 [Robust Fill](http://www.jiqizhixin.com/article/2691)……
 
-我谢谢这些人的关心，然而其实我并不在乎，也不看好人工智能。现在我简单的讲一下我的看法。
+我谢谢这些人的关心，然而其实人工智能的能力被严重的夸大了。现在我简单的讲一下我的看法。
 
 ### 机器一样的心
 
