Add 3 posts and update 2 ones: parser & practical idealism.

--- a/blog/2015-09-19-parser.markdown
+++ b/blog/2015-09-19-parser.markdown
@@ -1,8 +1,8 @@
-## 谈谈Parser
+## 对 Parser 的误解
 
 一直很了解人们对于parser的误解，可是一直都提不起兴趣来阐述对它的观点。然而我觉得是有必要解释一下这个问题的时候了。我感觉得到大部分人对于parser的误解之深，再不澄清一下，恐怕这些谬误就要写进歪曲的历史教科书，到时候就没有人知道真相了。
 
-### 什么是Parser
+### 什么是 Parser
 
 首先来科普一下。所谓parser，一般是指把某种格式的文本（字符串）转换成某种数据结构的过程。最常见的parser，是把程序文本转换成编译器内部的一种叫做“抽象语法树”（AST）的数据结构。也有简单一些的parser，用于处理CSV，JSON，XML之类的格式。
 
