--- a/blog/2018-03-01-truth.markdown
+++ b/blog/2018-03-01-truth.markdown
@@ -14,19 +14,21 @@
 
 可是他没有发现，吹牛大王们和打压过他的人，正在为他的迷惑而庆祝。他们打着“Google校友”的招牌，回到中国，招摇过市，对 Google 的牛逼和幼稚园式的企业文化各种宣扬。他们开始打起“硅谷”的招牌，进行各种”知识付费“。言之无物，却有千万的收入滚滚而来。他们数着钱，大笑着那些被他们迷惑的人。
 
-一个善良的人，他需要莫大的支持和勇气，才能冲破这样的迷雾，冲破对自己的怀疑：“我是不是那个错的人？” “我是不是伤害了其他人？” 他反复的问自己…… 可惜他的家人，他心爱的人，都不同程度的被舆论所洗脑，甚至对他进行反向灌输，否认他的价值。这经常使得他头脑胀痛……
-
-他反反复复的琢磨自己的言论，出尔反尔的删除自己的微博。因为在他的心中，装载着对其他人的关怀。对自己的怀疑，使得他的内心矛盾重重，压力山大。
+一个善良的人，他需要莫大的支持和勇气，才能冲破这样的迷雾，冲破对自己的怀疑：“我是不是那个错的人？” “我是不是伤害了其他人？” 他反复的问自己…… 可惜他的家人，他心爱的人，都不同程度的被媒体和舆论所洗脑，甚至对他进行反向灌输，否认他的价值，跟他说某某牛人说了什么…… 这经常使得他头脑胀痛。他反反复复的琢磨自己的言论，出尔反尔的删除自己的微博。因为在他的心中，装载着对其他人的关怀。对自己的怀疑，使得他的内心矛盾重重，压力山大。
 
 可是终于有一天，他看破了这一切。他所经历过的硅谷的一切，原来是一个骗局，一个在强大的金融机构支持下进行的巨大骗局，一场财富转移的浩劫。美联储（Federal Reserve）滥印了大量的美元，通过各种渠道泛滥地投放给硅谷的创业公司。不管这些公司看上去有多傻，不管他们是否可以盈利，都可以拿到很多的投资。可以说是投资人争先恐后在送钱，还生怕别人不要他们的钱了。为什么会这样呢？因为那些钱是不费吹灰之力用印钞机印出来的！
 
-当然，大部分的创业公司都因为愚蠢而倒闭，而他们其中少数人却会抓住这些投资，成为亿万富翁。极少的创业公司的盈利，其实无法弥补泛滥的投资开销。所以这没有带来社会财富的增加，而只带来社会财富的转移和消耗。这就是所谓“第二次dotcom泡沫”，它终究是会破灭的。
+当然，大部分的创业公司都因为愚蠢而倒闭，而他们其中少数人却会抓住这些投资，成为亿万富翁。极少的创业公司的盈利，其实无法弥补泛滥的投资开销。所以这没有带来社会财富的增加，而只带来社会财富的转移和消耗。这就是所谓“第二次dotcom泡沫”，它终究是会破灭的，因为它建立在虚无的基础之上。
 
-这是一场没有刀枪的抢劫。大量的印刷美钞，导致了其它地区，其他领域人们的贫穷。很多人做着对社会有贡献的工作，他们的收入却由于通货膨胀，房价上涨而变相的降低，变得生活困窘，不得不卖掉房子，背井离乡。抢劫，让硅谷的吹牛大王们成为了亿万富翁。
+这是一场没有刀枪的抢劫。大量的印刷美钞，导致了其它地区，其他领域人们的贫穷。很多人做着对社会有贡献的工作，他们的收入却由于通货膨胀，房价上涨而变相的降低，变得生活困窘，不得不卖掉房子，[背井离乡](http://www.yinwang.org/blog-cn/2016/06/20/it-and-society)。抢劫，让硅谷的吹牛大王们成为了亿万富翁。
 
-在这样的洗劫运动中，冲在最前面的，当然是人性最丑恶的一面。哪里有容易钱，哪里就必然有愚蠢和虚伪。拿着好几倍高工资的所谓“管理层”，号称 JS 专家，每天开着最新型号的 Tesla 上班，却连几十行 JavaScript 代码都会写的乱七八糟，漏洞百出。
+注意，我在上一段使用“抢劫”这个词，并不是一种比喻，而是使用它在字典上的定义。如果法律没有漏洞的话，这种做法就应该受到跟持枪抢劫同等的对待。我不是开玩笑，确实就是这样的，这是一种犯罪行为。你把别人辛苦劳动积累下来的财富，强行拿走了，别人无力反抗。这不是抢劫是什么？
 
-为什么呢？你们钱太多了，太容易混了！所以一个劣质的人，他只需要稍加伪装，就能混到那样的职位，骑在手下人的头上，各种瞎指挥，各种邀功。我看到整个的公司，建立在这种虚无的基础上，进行非常不公平的管理和分配。真正有能力的人被打压，拿着低廉的工资，加班到深夜。
+在这样的洗劫运动中，冲在最前面的，当然是人性最丑恶的一面。哪里有容易钱，哪里就必然有愚蠢和虚伪。拿着好几倍高工资的所谓“管理层”，号称 JS 专家，每天开着价值别人一整年工资的最新型号的 Tesla 上班，却连几十行 JavaScript 代码都会写的乱七八糟，漏洞百出。
+
+去看看他的博客吧！全部是水文。世界级的 JS 专家，主页上显摆着大一学生作业似的代码，好像是什么了不起的成就似的。最新的一篇博文说道：“我刚刚加入了一家非常非常厉害的公司！你知道我们每天都在解决多么困难，多么考脑筋（mind-boggling）的问题吗？！……”
+
+这样的人，怎么会成为团队领导的？你们钱太多了，太容易混了！所以一个劣质的人，他只需要稍加伪装，就能混到那样的职位，骑在手下人的头上，各种瞎指挥，各种邀功。我看到整个的公司，建立在这种虚无的基础上，进行非常不公平的管理和分配。真正有能力的人被打压，拿着低廉的工资，加班到深夜。
 
 各个大公司也因为有太多的“容易钱”，而变得毫无道德底线。每一家都在吹嘘自己有“黑科技”，很多这些项目一开头就明显是不可能成功的，却要利用媒体的洗脑，让外行大众以为有希望成功。其实他们的目的只有一个，那就是把大家辛苦挣来的钱，转移到极少数人的手里。不要忘了，这整个运动完全就是为了“财富转移”，而不是为了制造财富。我很惊讶，这样的行为居然不构成“诈骗罪”！
 
@@ -37,14 +39,28 @@
 所以呢，从今天起，我决定给自己一个转折点。我要让善良的人们知道，什么叫做王者归来！为此，我决定对回国之后的一些做法做出改变。
 
 1.  我不会再向邪恶的势力妥协，我不会再帮助吹牛大王们。一旦我发现对我不诚恳的人，自以为是的人，或者想利用和诱导我的人，即会终止与他的一切交流与合作。我不会与吹牛大王们掌权的公司合作。我会在与人合作中维护严格的职业道德和科学精神。
-2.  由于我的学术水平处于世界顶级的高度，我必须维护品牌的尊严，不能让它与低档货在同样的地点出现。我不会再采用“知识付费”，“付费问答”一类的 app 或者服务。现有的知识付费服务里面，存在太多的低档次信息。我自己都不用那些东西，觉得不但毫无收获，反而受到各种洗脑。我不愿意让我的名字出现在低级别的人甚至吹牛大王的名字旁边。一直都有出版社找我写书，而我一直都拒绝，也是同样的原因。因为这些出版社联系我的时候，方式让我觉得不够尊重。他们喜欢列举为他们出书的另外一些作者，而他们跟我完全不是一个档次，有些甚至是吹牛皮的。所以我一直都未能与国内出版社合作。另外，我还会严格实行通信的高水准，不回低水准或者语气不尊重的来信，不看微博的评论。
-3.  我自己的软件项目进入保密阶段，自由发展。我不会再宣扬我自己在写什么代码，我也没有必要一直做我曾经说我要做的事情。我可以告诉人们我的兴趣，但我没必要用代码来证明什么。地位低的人才需要用代码来换取别人的认可。我不吃“Talk is cheap. Show me the code!” 那套，那是错误的想法。应该是反过来，应该是其他人向我证明他们的能力才对 :)
-4.  入门书籍准备动工。对抗吹牛大王们的攻击，最有效的一个手段就是教育。只有让大多数人得到精髓的知识，才可能让他们看清楚很多东西。当我批评“AI 浮夸风”的时候，显然很多人是看不懂我在说什么的，只好任凭他们忽悠。甚至很多高级别的工程师，都在问我要不要用 AlphaGo 的方法来实现“自动编程”，这说明他们的知识其实很不到位。如果人们都理解我所掌握的计算机科学原理，就不会这样被忽悠了。为了提高人们的认知水平，我决定开始写计算机科学的入门读物。我曾经考虑过找一些“小白鼠”来测试我的读物是否容易懂，但现在我觉得那样太麻烦，没有那个必要。我会直接把正在进行中的草稿放在这里，让大家随意浏览。有问题或者不懂的人跟我联系就行了，我会考虑作出改进。
-5.  书籍的收费。我不想再采用之前的“付费+发货”方式，寄出 PDF 文件的做法非常不方便。这些书的章节，会被陆续撰写出来贴在博客上，这样大家随时都可以得到最新的版本。我打算最开头的时候进行“自觉付费”，这跟我其他博文的“自愿付费”形式不同。“自愿付费”的意思是，你看了我的文章，如果你不喜欢，或者你根本没看完，那么你可以不付钱。“自觉付费”的意思是，你如果仔细看完了书的内容，那么你就已经“享用了”它，你就“应该”付钱。如果你不付，就是有道德过错的，如果你不想付钱，就请不要看。这就像我摆个“自觉付费”水果摊，我不看着这摊子，你们吃了自己付钱就好，结果你吃了没付钱，这就不好了。你是否付费，将会影响到我的水果摊是否可以继续营业，会影响我继续写书的动力。我的博客含有代码，会统计这段时间的阅读人数。我会根据阅读人数与付费的比例，来推断是否有很多人没付钱。如果我发现付费的比例太小，我会适当调整作法。
+2.  由于我的学术水平处于世界顶级的高度，我必须维护品牌的尊严，不能让它太容易接触到，不能与低档货在同样的场合出现。我不会再采用“知识付费”，“付费问答”一类的做法，那些都显得太廉价。现有的知识付费服务里面，存在太多的低档次信息。我自己都不用那些东西，不但毫无收获，反而感觉到各种洗脑。我不会让我的名字出现在低级别的人甚至吹牛大王的名字旁边。一直都有出版社找我写书，而我一直都拒绝，也是同样的原因。因为这些出版社联系我的时候，方式让我觉得不够尊重。他们喜欢列举为他们出书的另外一些作者，而他们跟我完全不是一个档次，有些甚至是吹牛皮的。所以我一直都未能与国内出版社合作。另外，我还会严格实行通信的高水准，不回低水准或者不懂得礼仪和尊重的来信，删除有这种嫌疑的联系人。由于微博的用户没有任何标准可言，所以以后不再看微博的评论，虽然还是可以随便评论。如果发现有特别烦扰大家的评论者，请向我报告。
+3.  停止谈论设计。虽然我仍然觉得设计是很重要的事情，然而我不想再花时间来评论一些日常物品的设计。Don Norman 的书给了我很多的启发，然而我并不觉得我可以和他一样谈论设计，甚至成立设计咨询公司。首要的问题是，在我的环境里，人们还是很不重视设计的。不但不重视，反而会认为那是在说一些很不起眼的小事，好像一个消费者在抱怨他买到的物品。很多人觉得“这里应该有一个按钮”这种事根本没有“难度”，你去说那个就降低了身份。虽然我觉得这些想法都是错误的，但由于大部分人都那个样子，我也不想跟他们废话了。所以我决定停止分享关于日常事物设计的分析和研究。我会继续关心设计这件事，然而我的想法会保留给我自己的产品，而不公开分享。
+4.  入门书籍准备动工。对抗吹牛大王们的攻击，最有效的武器就是教育。教育的缺乏，就是为什么如此离谱的谎言居然有那么多人信。只有让大多数人得到精髓的知识，才可能让他们看清楚很多东西。当我批评“AI 浮夸风”的时候，显然很多人是看不懂我在说什么的，只好任凭他们忽悠。甚至很多高级别的工程师，都在问我要不要用 AlphaGo 的方法来实现“自动编程”，这说明他们的知识其实很不到位。如果人们都理解我所掌握的计算机科学原理，就不会这样被忽悠了。为了提高人们的认知水平，我决定开始写计算机科学的入门读物。我曾经考虑过找一些“小白鼠”来测试我的读物是否容易懂，但现在我觉得太麻烦，没有那个必要。我会直接把草稿发布出来，让大家随意浏览。有问题或者不懂的人跟我联系就行了，我会考虑作出改进。
+5.  书籍的收费。我不想再采用之前寄出 PDF 文件的做法，那非常不方便。这些书的章节，会被陆续撰写出来贴在博客上，这样大家随时都可以得到最新的版本。我打算最开头的时候进行“自觉付费”，这跟我其他博文的“自愿付费”形式不同。“自愿付费”的意思是，你看了我的文章，如果你不喜欢，或者你根本没看完，那么你可以不付钱。“自觉付费”的意思是，你如果看完了书的内容，那么你就已经“享用了”它，你就应该付钱。如果你不付，就是有道德过错的，如果你不想付钱，就请不要看。这就像我摆个“自觉付费”水果摊，你们吃了自己付钱就好，结果你吃了没付钱，这就不好了。你是否付费，将会影响到我的水果摊是否可以继续营业，会影响我继续写书的动力。我的博客含有代码，会统计这段时间的阅读人数。我会根据阅读人数与付费的比例，来推断是否有很多人没付钱。如果我发现付费的比例太小，我会适当调整作法。
 6.  书籍的启动经费。我希望在书的第一章发布之前，也就是现在，收集一些“启动经费”，来开始写作的过程。这些经费用于建立必须的工作环境。这些经费也用于“估算”有多少人会买我的书。如果你看到这篇文章而且有意要买这本书，可以点击这个[付费](http://www.yinwang.org/blog-cn/2016/04/13/pay-blog)页面进行少量的付费（30元），留言就写“期待CS入门书”。我会根据付费的人数来估计图书将来的销量，所以你如果感兴趣的话，请一定向我发出你的支持。
+
+### 与经典书籍的区别
 
 说了挺久要写书，一直没有动力动笔。一方面是由于我觉得国内的出版社都不大靠谱，而且他们出的很多书水平太低，有损我的品牌形象。另外很大一部分原因，是因为我写东西都是一针见血，容易懂，而且不会“留一手”。我很怕一不小心说太明白，就让关键的知识落到道德水平低的人手里。我也许顾虑太多了。其实我只需要提供我愿意提供的知识，而保留我不愿意提供的就行。另外，这些入门知识被广大群众了解，显然对善良的人有好处，而对吹牛逼的人们不是什么好事。这些知识将会帮助他们识破骗局，成为他们对抗这些虚假权威的武器。所以，我真的决定要写书了。
 
-这本书虽然被我叫做“普及”或者“入门”读物，而其实它将会包含最精髓的计算机科学。我敢打赌，很多工作多年的资深程序员，对于其中的很多东西都不会很清楚。所以它也可以作为资深程序员们的进修读物。当然我会降低门槛，努力让初学者都能看懂。
+这本书虽然被我叫做“普及”或者“入门”读物，但它并不只针对初学者。对于我来说，很多“资深”的程序员，其实根本没有入门。当我进入研究生阶段的时候，我发现了 SICP，看了这本所谓“入门书”，我惊讶地发现自己以前其实不会编程。在美国工作的时候，我发现很多高级别的程序员也是一样的情况。他们以为自己懂了，资历很深了，而其实还差很远，到了关键的时候就会犯错误。这就是我所谓的“入门”的含义。所以它也可以作为资深程序员们的进修读物。当然我会降低门槛，努力让初学者都能看懂。
 
-为了知识的民主和社会的文明，提高普通大众的技术教育水平迫在眉睫。这些事情我不放心其它人来做，更害怕发言权落到吹牛扯淡的野心家手里。仔细看过我的技术文章的人，都应该知道它们的见识深度，是很难超越的。所以很希望大家能够支持我开张写书。祝愿大家走出迷茫，获得真知！
+因为我好像很推崇 Lisp/Scheme 语言。有些人看我想写这种入门读物，可能以为我会写一本“王垠的 Little Schemer”或者“王垠的 SICP”。这是一种比较常见的误解。如果我只是模仿 The Little Schemer （TLS） 或者 [SICP](https://mitpress.mit.edu/sicp/)，那是完全没有意义的。你去读那些书的中文版就行了。
+
+很多年前我就是从 SICP 入门的，但是经过多年的研究，直接跟这些书的作者们学习交流，我发现这些书虽然贡献卓著，是不可磨灭的经典，我尊敬它们的作者，可是它们也有很多不足的地方甚至误导（这句话不要传到某些人耳朵里哈）。这就是为什么有好几个出版社请我翻译 TLS，我最后都拒绝了，因为我想写很不一样的东西。
+
+很多人曾经问我：“我该看这本书还是那本书？” 我都不想回答，也是类似的原因。因为我的脑子里有一本更好的书，我觉得回答这样的问题有点降低自己的身份。我不再是此类书籍的消费者，而是创造者的级别。出于尊重的原因，你不可以问一个创造者这样的“消费级问题”。这就像你不可以问法拉利的设计者：“我是买奥迪好还是奔驰好？” 出于礼貌他也许会给你一个回答，但他的内心会很受伤 :p 同理的，请我翻译别人的此类书籍，也让我感觉很悲哀。
+
+我在之前的好几篇文章已经指出了 Scheme 语言的一些设计上的弱点，完全以 Scheme 的方式写书，显然会把很多这样的弱点当成优点，对新手造成误导。从 SICP 或者 TLS 入门的学生，很多偏激的认为 Lisp （或者 Haskell，Scala）是世界上最好的语言，以为 Lisp 的 list 是世界上最好的数据结构，以至于写 Java 代码还要在里面自己造出 Lisp 的 list 结构，搞得又复杂效率还很低。我不希望给我的读者们造成这样的效果，因为很显然我知道 list 的缺点。
+
+我希望我的书是一本有机融合多种思维方式的精华，它应该本着科学的态度，而不是宗教的。这本书要教会读者的，不是某一种语言或者某一种思维方式，而是所有的语言和所有的思维方式的精华结合在一起，并且提醒你小心它们的缺点。
+
+另外，我发现 SICP 这样的书籍还有很多写作上的弱点，很多地方有没必要的细节和冗长，导致初学者读起来头痛。书中代码的实现有些时候并不简洁清晰，到了第四章就很难看懂了。TLS 的“孔夫子式”写作方式很精悍，却还是可以很伤脑子看不懂。过度的强调递归和尾递归，会导致学生倾向于在工作中过度使用尾递归代码。另外 TLS 缺少跟实际工作接轨的内容，倒是为 Y combinator 之类完全不实用的东西耗费很多篇幅，这会让读者看了书却不知道怎么改善工作要用的代码，以至于失去动力，半途而废。我曾经很推崇费曼的物理学讲义，可是实话说吧我真想再学点物理，所以看了一些费曼的讲义。感觉开头好玩，到后来还是很累很痛苦想睡觉…… 所以我需要探索更好的方式来表达这些内容。这本书不会再号称“计算机科学的费曼讲义”，它应该更好！如果它不是更好，我就继续改进它 :)
+
+为了知识的民主和社会的文明，提高普通大众的技术教育水平迫在眉睫。这些事情我不放心其它人来做，更害怕发言权落到吹牛扯淡的野心家手里。仔细看过我的技术文章的人，都应该知道它们的见识深度是很难超越的。所以很希望大家能够支持我开张写书。祝愿大家走出迷茫，获得真知！
