Update several posts.

--- a/blog/2017-11-11-genius.markdown
+++ b/blog/2017-11-11-genius.markdown
@@ -18,8 +18,6 @@
 
 如果你把一个同伴吹成天才，你不就成了天才的同伴了吗？一传十，十传百，到时候大家都认为他是天才的时候，你就是天才的同学了。你就可以“不经意”地提起“当年我坐在他旁边那个办公桌”，“他的办公室就在我头顶上”之类的事情了 ;-) 当然你吹嘘的这个人，应该要比你强一些，不然你干嘛不吹自己呢。可是呢，这个人有多聪明，就不一定了。
 
-我并不是说你一定不要被别人利用，但知道这是怎么回事，总比不知道好。
-
 图灵的天才名号，很大部分就是他的同僚或者接班人们搞的政治。计算理论领域的研究者们，几乎都是图灵的“利用者”，图灵是他们的工具。本来很简单就可以说清楚的原理，硬是要用图灵机搞得无比复杂，乌七八糟的。他们当然很愿意告诉你，图灵是一个天才，图灵机是无比伟大的发明，没有图灵就没有计算机科学！而实际上呢，没有任何一台早期的通用计算机接受过图灵的启发（Enigma 机器不是通用的计算机）。
 
 你一直被图灵机蒙在鼓里，直到有一天你听说一个叫 Neil Jones 的人。他用一种比图灵机简单很多的模型，解释和证明了完全一样的定理，甚至更加严格的定理，证明的方式也严格很多…… Neil Jones 是天才吗？相对于图灵，他更接近一个负责的科学家，然而他当然也不是天才。
@@ -32,6 +30,8 @@
 
 这也就是为什么喜欢跟人“比聪明”的人，其实是很傻的。他们没有意识到，把自己的智力或者能力跟其他人比，其实让自己落入了居心叵测的人的圈套里，以至于被他们利用或者奴役。名义上叫你是“天才”，而其实呢，你只是一个工具或者奴隶。
 
-当然，我并不否认爱因斯坦，费曼之类的人物是很聪明的。我很尊敬他们，然而他们是天才吗？…… 说到这里，这样的问题还有意义吗？世界上根本就不存在天才这种东西。所有喜欢给你提起“天才”，对他们各种夸赞和崇拜的人，要么是有政治目的，要不然就是还被蒙在鼓里。
+我并不是说人一定不能被别人利用，暂时被人利用也是一种谋生方式。我只是在告诉你，历史上和你身边的很多所谓“天才”身上正在发生的事情。我并没有觉得这种事相对于人类社会的其它龌龊事情有什么特别不好的地方，我也没说你得为此做什么，改变什么。我只是觉得这是很多人不知道的信息，知道了是有好处的。
 
-天才出于政治。“天才”这个词，根本就不应该在人们心目中继续占据重要的地位。世界上有远比聪明更重要的东西。去除“天才”在你心中的地位，你的心灵才能得到解脱，获得自由。这可能就是我最后一次跟大家提起“天才”这个词。
+当然我并不否认爱因斯坦，费曼，达芬奇之类的人物是很聪明的。我很尊敬他们，然而他们是天才吗？…… 说到这里，这样的问题还有意义吗？世界上根本就不存在天才这种东西。所有喜欢给你提起“天才”，对他们各种夸赞和崇拜的人，要么是有政治目的，要不然就是还被蒙在鼓里。
+
+所以呢，不但天才出于勤奋，而且天才出于政治。“天才”这个词，根本就不应该在人们心目中继续占据重要的地位。世界上有远比聪明更重要的东西。去除“天才”在你心中的地位，你的心灵才能得到解脱，获得自由。这可能就是我最后一次跟大家提起“天才”这个词。
