Update the "change" post.

--- a/blog/2018-05-28-change.markdown
+++ b/blog/2018-05-28-change.markdown
@@ -10,8 +10,10 @@
 
 当今社会虽然有各种问题，然而它并不是以前那样脆弱。很多事情我指出了也不会起作用，不说它也糟不到哪里去。大街上的小混混知道谁是王垠吗？不知道。同理，技术界的流氓们也不会在乎王垠说什么。
 
-我看到的只是一个领域的人，甚至不是他们的全部。稍微往外面一跳，就发现自己以为很重要的事情，在外人看来不知所谓，无关紧要。什么 AI，区块链，黑科技…… 吹它们做什么，批它们做什么？有的人关心的只是莫扎特！很多人，不管他们是什么冠冕堂皇的头衔，应该像街头的低素质小混混一样被抛在脑后，被忽略，而不是被仔仔细细记录下来，进行深入的批判。这不是一个顶级人才应该做的事。
+我看到的只是一个领域的人，甚至不是他们的全部。稍微往外面一跳，就发现自己以为很重要的事情，在外人看来不知所谓，无关紧要。什么 AI，区块链，黑科技…… 吹它们做什么，批它们做什么？有的人关心的只是莫扎特！
 
-所以“拯救人类”不应该是我的任务。上天赋予我的才华，应该被用到更有意义的地方。我的目标不应该是跟那些完全不在一个层次的人较真，而是发现那些跟我在一个层次的人。当然这里所谓的“层次”，不是通常意义上的社会等级，而是实质意义上的“人的质量”。就像 Emily Post 所谓的“Best Society”，这里的层次无关出身，财富，社会头衔……
+很多人，不管他们是什么冠冕堂皇的头衔，应该像街头的低素质小混混一样被抛在脑后，被忽略，而不是被仔仔细细记录下来，进行深入的批判。这不是一个顶级人才应该做的事。所以撤除和停止写批判他们的文章，非但不是妥协，而只是他们彻彻底底的失去了地位。
+
+“拯救人类”不应该是我的任务。上天赋予我的才华，应该被用到更有意义的地方。我的目标不应该是跟那些完全不在一个层次的人较真，而是发现那些跟我在一个层次的人。当然这里所谓的“层次”，不是通常意义上的社会等级，而是实质意义上的“人的质量”。就像 Emily Post 所谓的“Best Society”，这里的层次无关出身，财富，社会头衔……
 
 世界是多元化的，每个人都有自己的角落，我会找到本来属于我的角落。
